// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Line chart rendering Should render the Line chart with date x-axis data 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_19"
    role="presentation"
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone20"
    >
      <svg
        aria-label="LineChart"
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_19"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_19"
          transform="translate(40, 0)"
        />
        <g>
          <line
            id="verticalLine14"
            stroke="#C8C8C8"
            stroke-dasharray="5,5"
            visibility="hidden"
            x1="0"
            x2="0"
            y1="0"
            y2="0"
          />
          <g>
            <line
              id="borderID13_0_1"
              opacity="1"
              stroke="#ffffff"
              stroke-linecap="round"
              stroke-width="8"
              x1="40"
              x2="27.763157894736842"
              y1="-3.2692307692307736"
              y2="17.884615384615383"
            />
            <line
              id="borderID13_0_2"
              opacity="1"
              stroke="#ffffff"
              stroke-linecap="round"
              stroke-width="8"
              x1="27.763157894736842"
              x2="16.31578947368421"
              y1="17.884615384615383"
              y2="-3.2692307692307736"
            />
            <line
              id="borderID13_0_3"
              opacity="1"
              stroke="#ffffff"
              stroke-linecap="round"
              stroke-width="8"
              x1="16.31578947368421"
              x2="4.0789473684210495"
              y1="-3.2692307692307736"
              y2="17.884615384615383"
            />
            <line
              id="borderID13_0_4"
              opacity="1"
              stroke="#ffffff"
              stroke-linecap="round"
              stroke-width="8"
              x1="4.0789473684210495"
              x2="-7.763157894736841"
              y1="17.884615384615383"
              y2="-3.2692307692307736"
            />
            <line
              id="borderID13_0_5"
              opacity="1"
              stroke="#ffffff"
              stroke-linecap="round"
              stroke-width="8"
              x1="-7.763157894736841"
              x2="-20"
              y1="-3.2692307692307736"
              y2="17.884615384615383"
            />
            <line
              id="lineID12_0_1"
              opacity="1"
              stroke="#637cef"
              stroke-linecap="round"
              stroke-width="4"
              x1="40"
              x2="27.763157894736842"
              y1="-3.2692307692307736"
              y2="17.884615384615383"
            />
            <line
              id="lineID12_0_2"
              opacity="1"
              stroke="#637cef"
              stroke-linecap="round"
              stroke-width="4"
              x1="27.763157894736842"
              x2="16.31578947368421"
              y1="17.884615384615383"
              y2="-3.2692307692307736"
            />
            <line
              id="lineID12_0_3"
              opacity="1"
              stroke="#637cef"
              stroke-linecap="round"
              stroke-width="4"
              x1="16.31578947368421"
              x2="4.0789473684210495"
              y1="-3.2692307692307736"
              y2="17.884615384615383"
            />
            <line
              id="lineID12_0_4"
              opacity="1"
              stroke="#637cef"
              stroke-linecap="round"
              stroke-width="4"
              x1="4.0789473684210495"
              x2="-7.763157894736841"
              y1="17.884615384615383"
              y2="-3.2692307692307736"
            />
            <line
              id="lineID12_0_5"
              opacity="1"
              stroke="#637cef"
              stroke-linecap="round"
              stroke-width="4"
              x1="-7.763157894736841"
              x2="-20"
              y1="-3.2692307692307736"
              y2="17.884615384615383"
            />
            <path
              aria-label="1/1/2020, 12:00:00 am. First, 30."
              d="M39.5 -3.2692307692307736
     A0.5 0.5 0 1 0 40.5 -3.2692307692307736
     M39.5 -3.2692307692307736
     A 0.5 0.5 0 1 1 40.5 -3.2692307692307736
     "
              data-is-focusable="true"
              fill="#637cef"
              id="circle11_0_1"
              opacity="1"
              role="img"
              stroke="#637cef"
              stroke-width="4"
              tabindex="0"
            />
            <path
              aria-label="1/2/2020, 12:00:00 am. First, 50."
              d="M27.263157894736842 17.884615384615383
     A0.5 0.5 0 1 0 28.263157894736842 17.884615384615383
     M27.263157894736842 17.884615384615383
     A 0.5 0.5 0 1 1 28.263157894736842 17.884615384615383
     "
              data-is-focusable="true"
              fill="#637cef"
              id="circle11_0_2"
              opacity="1"
              role="img"
              stroke="#637cef"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="1/3/2020, 12:00:00 am. First, 30."
              d="M15.815789473684209 -3.2692307692307736
     A0.5 0.5 0 1 0 16.81578947368421 -3.2692307692307736
     M15.815789473684209 -3.2692307692307736
     A 0.5 0.5 0 1 1 16.81578947368421 -3.2692307692307736
     "
              data-is-focusable="true"
              fill="#637cef"
              id="circle11_0_3"
              opacity="1"
              role="img"
              stroke="#637cef"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="1/4/2020, 12:00:00 am. First, 50."
              d="M3.5789473684210495 17.884615384615383
     A0.5 0.5 0 1 0 4.5789473684210495 17.884615384615383
     M3.5789473684210495 17.884615384615383
     A 0.5 0.5 0 1 1 4.5789473684210495 17.884615384615383
     "
              data-is-focusable="true"
              fill="#637cef"
              id="circle11_0_4"
              opacity="1"
              role="img"
              stroke="#637cef"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="1/5/2020, 12:00:00 am. First, 30."
              d="M-8.26315789473684 -3.2692307692307736
     A0.5 0.5 0 1 0 -7.263157894736841 -3.2692307692307736
     M-8.26315789473684 -3.2692307692307736
     A 0.5 0.5 0 1 1 -7.263157894736841 -3.2692307692307736
     "
              data-is-focusable="true"
              fill="#637cef"
              id="circle11_0_5"
              opacity="1"
              role="img"
              stroke="#637cef"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="1/6/2020, 12:00:00 am. First, 50."
              d="M-20.5 17.884615384615383
     A0.5 0.5 0 1 0 -19.5 17.884615384615383
     M-20.5 17.884615384615383
     A 0.5 0.5 0 1 1 -19.5 17.884615384615383
     "
              data-is-focusable="true"
              fill="#637cef"
              id="circle11_0_55L"
              opacity="1"
              role="img"
              stroke="#637cef"
              stroke-width="4"
              tabindex="-1"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone21"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="First"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="1"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: #637cef;
                              border-color: #637cef;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, #637cef, #637cef);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        First
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Line chart rendering Should render the Line chart with numeric x-axis data 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_8"
    role="presentation"
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone9"
    >
      <svg
        aria-label="LineChart"
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_8"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_8"
          transform="translate(40, 0)"
        />
        <g>
          <line
            id="verticalLine3"
            stroke="#C8C8C8"
            stroke-dasharray="5,5"
            visibility="hidden"
            x1="0"
            x2="0"
            y1="0"
            y2="0"
          />
          <g>
            <line
              id="lineID1_2_1"
              opacity="1"
              stroke="yellow"
              stroke-linecap="round"
              stroke-width="4"
              x1="-20"
              x2="16"
              y1="-17.065217391304344"
              y2="12.826086956521738"
            />
            <path
              aria-label="70. metaData3, 30."
              d="M-20.5 -17.065217391304344
     A0.5 0.5 0 1 0 -19.5 -17.065217391304344
     M-20.5 -17.065217391304344
     A 0.5 0.5 0 1 1 -19.5 -17.065217391304344
     "
              data-is-focusable="true"
              fill="yellow"
              id="circle0_2_1"
              opacity="1"
              role="img"
              stroke="yellow"
              stroke-width="4"
              tabindex="0"
            />
            <path
              aria-label="40. metaData3, 80."
              d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
              data-is-focusable="true"
              fill="yellow"
              id="circle0_2_11L"
              opacity="1"
              role="img"
              stroke="yellow"
              stroke-width="4"
              tabindex="-1"
            />
            <line
              id="lineID1_1_1"
              opacity="1"
              stroke="green"
              stroke-linecap="round"
              stroke-width="4"
              x1="28"
              x2="4"
              y1="0.8695652173913064"
              y2="18.804347826086957"
            />
            <path
              aria-label="30. metaData2, 60."
              d="M27.5 0.8695652173913064
     A0.5 0.5 0 1 0 28.5 0.8695652173913064
     M27.5 0.8695652173913064
     A 0.5 0.5 0 1 1 28.5 0.8695652173913064
     "
              data-is-focusable="true"
              fill="green"
              id="circle0_1_1"
              opacity="1"
              role="img"
              stroke="green"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="50. metaData2, 90."
              d="M3.5 18.804347826086957
     A0.5 0.5 0 1 0 4.5 18.804347826086957
     M3.5 18.804347826086957
     A 0.5 0.5 0 1 1 4.5 18.804347826086957
     "
              data-is-focusable="true"
              fill="green"
              id="circle0_1_11L"
              opacity="1"
              role="img"
              stroke="green"
              stroke-width="4"
              tabindex="-1"
            />
            <line
              id="lineID1_0_1"
              opacity="1"
              stroke="red"
              stroke-linecap="round"
              stroke-width="4"
              x1="40"
              x2="16"
              y1="-5.108695652173914"
              y2="12.826086956521738"
            />
            <path
              aria-label="20. metaData1, 50."
              d="M39.5 -5.108695652173914
     A0.5 0.5 0 1 0 40.5 -5.108695652173914
     M39.5 -5.108695652173914
     A 0.5 0.5 0 1 1 40.5 -5.108695652173914
     "
              data-is-focusable="true"
              fill="red"
              id="circle0_0_1"
              opacity="1"
              role="img"
              stroke="red"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="40. metaData1, 80."
              d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
              data-is-focusable="true"
              fill="red"
              id="circle0_0_11L"
              opacity="1"
              role="img"
              stroke="red"
              stroke-width="4"
              tabindex="-1"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone10"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData1"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: red;
                              border-color: red;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, red, red);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData1
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData2"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: green;
                              border-color: green;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, green, green);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData2
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData3"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: yellow;
                              border-color: yellow;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, yellow, yellow);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData3
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Screen resolution Should remain unchanged on zoom in 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_174"
    role="presentation"
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone175"
    >
      <svg
        aria-label="LineChart"
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_174"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_174"
          transform="translate(40, 0)"
        />
        <g>
          <line
            id="verticalLine169"
            stroke="#C8C8C8"
            stroke-dasharray="5,5"
            visibility="hidden"
            x1="0"
            x2="0"
            y1="0"
            y2="0"
          />
          <g>
            <line
              id="lineID167_2_1"
              opacity="1"
              stroke="yellow"
              stroke-linecap="round"
              stroke-width="4"
              x1="-20"
              x2="16"
              y1="-17.065217391304344"
              y2="12.826086956521738"
            />
            <path
              aria-label="70. metaData3, 30."
              d="M-20.5 -17.065217391304344
     A0.5 0.5 0 1 0 -19.5 -17.065217391304344
     M-20.5 -17.065217391304344
     A 0.5 0.5 0 1 1 -19.5 -17.065217391304344
     "
              data-is-focusable="true"
              fill="yellow"
              id="circle166_2_1"
              opacity="1"
              role="img"
              stroke="yellow"
              stroke-width="4"
              tabindex="0"
            />
            <path
              aria-label="40. metaData3, 80."
              d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
              data-is-focusable="true"
              fill="yellow"
              id="circle166_2_11L"
              opacity="1"
              role="img"
              stroke="yellow"
              stroke-width="4"
              tabindex="-1"
            />
            <line
              id="lineID167_1_1"
              opacity="1"
              stroke="green"
              stroke-linecap="round"
              stroke-width="4"
              x1="28"
              x2="4"
              y1="0.8695652173913064"
              y2="18.804347826086957"
            />
            <path
              aria-label="30. metaData2, 60."
              d="M27.5 0.8695652173913064
     A0.5 0.5 0 1 0 28.5 0.8695652173913064
     M27.5 0.8695652173913064
     A 0.5 0.5 0 1 1 28.5 0.8695652173913064
     "
              data-is-focusable="true"
              fill="green"
              id="circle166_1_1"
              opacity="1"
              role="img"
              stroke="green"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="50. metaData2, 90."
              d="M3.5 18.804347826086957
     A0.5 0.5 0 1 0 4.5 18.804347826086957
     M3.5 18.804347826086957
     A 0.5 0.5 0 1 1 4.5 18.804347826086957
     "
              data-is-focusable="true"
              fill="green"
              id="circle166_1_11L"
              opacity="1"
              role="img"
              stroke="green"
              stroke-width="4"
              tabindex="-1"
            />
            <line
              id="lineID167_0_1"
              opacity="1"
              stroke="red"
              stroke-linecap="round"
              stroke-width="4"
              x1="40"
              x2="16"
              y1="-5.108695652173914"
              y2="12.826086956521738"
            />
            <path
              aria-label="20. metaData1, 50."
              d="M39.5 -5.108695652173914
     A0.5 0.5 0 1 0 40.5 -5.108695652173914
     M39.5 -5.108695652173914
     A 0.5 0.5 0 1 1 40.5 -5.108695652173914
     "
              data-is-focusable="true"
              fill="red"
              id="circle166_0_1"
              opacity="1"
              role="img"
              stroke="red"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="40. metaData1, 80."
              d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
              data-is-focusable="true"
              fill="red"
              id="circle166_0_11L"
              opacity="1"
              role="img"
              stroke="red"
              stroke-width="4"
              tabindex="-1"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone176"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData1"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: red;
                              border-color: red;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, red, red);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData1
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData2"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: green;
                              border-color: green;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, green, green);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData2
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData3"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: yellow;
                              border-color: yellow;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, yellow, yellow);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData3
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Screen resolution Should remain unchanged on zoom out 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          display: flex;
          flex-direction: column;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          height: 100%;
          overflow: hidden;
          width: 100%;
        }
    id="chart_185"
    role="presentation"
  >
    <div
      class=
          ms-FocusZone
          &:focus {
            outline: none;
          }
          {
            overflow: auto;
          }
      data-focuszone-id="FocusZone186"
    >
      <svg
        aria-label="LineChart"
        focusable="false"
        height="0"
        style="display: block;"
        width="0"
      >
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
                width: 1px;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
          id="xAxisGElementchart_185"
          transform="translate(0, -35)"
        />
        <g
          class=

              & text {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                fill: #323130;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 10px;
                font-weight: 600;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                fill: rgb(179, 179, 179);
              }
              & path {
                display: none;
              }
              & line {
                opacity: 0.2;
                stroke: #323130;
              }
              @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                opacity: 0.1;
                stroke: rgb(179, 179, 179);
              }
          id="yAxisGElementchart_185"
          transform="translate(40, 0)"
        />
        <g>
          <line
            id="verticalLine180"
            stroke="#C8C8C8"
            stroke-dasharray="5,5"
            visibility="hidden"
            x1="0"
            x2="0"
            y1="0"
            y2="0"
          />
          <g>
            <line
              id="lineID178_2_1"
              opacity="1"
              stroke="yellow"
              stroke-linecap="round"
              stroke-width="4"
              x1="-20"
              x2="16"
              y1="-17.065217391304344"
              y2="12.826086956521738"
            />
            <path
              aria-label="70. metaData3, 30."
              d="M-20.5 -17.065217391304344
     A0.5 0.5 0 1 0 -19.5 -17.065217391304344
     M-20.5 -17.065217391304344
     A 0.5 0.5 0 1 1 -19.5 -17.065217391304344
     "
              data-is-focusable="true"
              fill="yellow"
              id="circle177_2_1"
              opacity="1"
              role="img"
              stroke="yellow"
              stroke-width="4"
              tabindex="0"
            />
            <path
              aria-label="40. metaData3, 80."
              d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
              data-is-focusable="true"
              fill="yellow"
              id="circle177_2_11L"
              opacity="1"
              role="img"
              stroke="yellow"
              stroke-width="4"
              tabindex="-1"
            />
            <line
              id="lineID178_1_1"
              opacity="1"
              stroke="green"
              stroke-linecap="round"
              stroke-width="4"
              x1="28"
              x2="4"
              y1="0.8695652173913064"
              y2="18.804347826086957"
            />
            <path
              aria-label="30. metaData2, 60."
              d="M27.5 0.8695652173913064
     A0.5 0.5 0 1 0 28.5 0.8695652173913064
     M27.5 0.8695652173913064
     A 0.5 0.5 0 1 1 28.5 0.8695652173913064
     "
              data-is-focusable="true"
              fill="green"
              id="circle177_1_1"
              opacity="1"
              role="img"
              stroke="green"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="50. metaData2, 90."
              d="M3.5 18.804347826086957
     A0.5 0.5 0 1 0 4.5 18.804347826086957
     M3.5 18.804347826086957
     A 0.5 0.5 0 1 1 4.5 18.804347826086957
     "
              data-is-focusable="true"
              fill="green"
              id="circle177_1_11L"
              opacity="1"
              role="img"
              stroke="green"
              stroke-width="4"
              tabindex="-1"
            />
            <line
              id="lineID178_0_1"
              opacity="1"
              stroke="red"
              stroke-linecap="round"
              stroke-width="4"
              x1="40"
              x2="16"
              y1="-5.108695652173914"
              y2="12.826086956521738"
            />
            <path
              aria-label="20. metaData1, 50."
              d="M39.5 -5.108695652173914
     A0.5 0.5 0 1 0 40.5 -5.108695652173914
     M39.5 -5.108695652173914
     A 0.5 0.5 0 1 1 40.5 -5.108695652173914
     "
              data-is-focusable="true"
              fill="red"
              id="circle177_0_1"
              opacity="1"
              role="img"
              stroke="red"
              stroke-width="4"
              tabindex="-1"
            />
            <path
              aria-label="40. metaData1, 80."
              d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
              data-is-focusable="true"
              fill="red"
              id="circle177_0_11L"
              opacity="1"
              role="img"
              stroke="red"
              stroke-width="4"
              tabindex="-1"
            />
          </g>
        </g>
      </svg>
    </div>
    <div
      class=

          {
            margin-left: 20px;
            margin-top: 8px;
          }
    >
      <div
        class=

            {
              align-items: center;
              margin-bottom: 0;
              margin-left: -8px;
              margin-right: 0;
              margin-top: -8px;
              white-space: nowrap;
              width: 100%;
            }
      >
        <div>
          <div
            style="position: relative;"
          >
            <div
              data-automation-id="visibleContent"
              style="position: fixed; visibility: hidden;"
            >
              <div
                aria-label="Legends"
                aria-multiselectable="false"
                class=
                    ms-FocusZone
                    &:focus {
                      outline: none;
                    }
                data-focuszone-id="FocusZone187"
                role="listbox"
              >
                <div
                  class=
                      ms-OverflowSet
                      {
                        display: flex;
                        flex-wrap: wrap;
                        justify-content: unset;
                        position: relative;
                      }
                  role="group"
                >
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData1"
                      aria-posinset="1"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="0"
                    >
                      <div
                        class=

                            {
                              background-color: red;
                              border-color: red;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, red, red);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData1
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData2"
                      aria-posinset="2"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: green;
                              border-color: green;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, green, green);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData2
                      </div>
                    </button>
                  </div>
                  <div
                    class=
                        ms-OverflowSet-item
                        {
                          display: inherit;
                          flex-shrink: 0;
                        }
                    role="none"
                  >
                    <button
                      aria-label="metaData3"
                      aria-posinset="3"
                      aria-selected="false"
                      aria-setsize="3"
                      class=

                          {
                            align-items: center;
                            background: none;
                            border: none;
                            cursor: pointer;
                            display: flex;
                            outline: transparent;
                            padding-bottom: 8px;
                            padding-left: 8px;
                            padding-right: 8px;
                            padding-top: 8px;
                            position: relative;
                            text-transform: capitalize;
                          }
                          &::-moz-focus-inner {
                            border: 0;
                          }
                          .ms-Fabric--isFocusVisible &:focus:after {
                            border: 1px solid transparent;
                            bottom: 1px;
                            content: "";
                            left: 1px;
                            outline: 1px solid #605e5c;
                            position: absolute;
                            right: 1px;
                            top: 1px;
                            z-index: 1;
                          }
                          @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                            outline-color: #605e5c;
                          }
                      data-is-focusable="true"
                      role="option"
                      tabindex="-1"
                    >
                      <div
                        class=

                            {
                              background-color: yellow;
                              border-color: yellow;
                              border: 1px solid;
                              content: ;
                              height: 12px;
                              margin-right: 8px;
                              width: 12px;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                              content: linear-gradient(to right, yellow, yellow);
                              opacity: ;
                            }
                      />
                      <div
                        class=

                            {
                              -moz-osx-font-smoothing: grayscale;
                              -webkit-font-smoothing: antialiased;
                              color: #323130;
                              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                              font-size: 12px;
                              font-weight: 400;
                              line-height: 16px;
                              opacity: ;
                            }
                      >
                        metaData3
                      </div>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      class="ms-layer"
    />
  </div>
</div>
`;

exports[`Should reflect theme change 1`] = `
<div>
  <div
    class=

        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          background: #1b1a19;
          color: #f3f2f1;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
        }
  >
    <div
      class=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            display: flex;
            flex-direction: column;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: 100%;
            overflow: hidden;
            width: 100%;
          }
      id="chart_199"
      role="presentation"
    >
      <div
        class=
            ms-FocusZone
            &:focus {
              outline: none;
            }
            {
              overflow: auto;
            }
        data-focuszone-id="FocusZone200"
      >
        <svg
          aria-label="LineChart"
          focusable="false"
          height="0"
          style="display: block;"
          width="0"
        >
          <g
            class=

                & text {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #f3f2f1;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 10px;
                  font-weight: 600;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                  fill: rgb(179, 179, 179);
                }
                & line {
                  opacity: 0.2;
                  stroke: #f3f2f1;
                  width: 1px;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                  opacity: 0.1;
                  stroke: rgb(179, 179, 179);
                }
                & path {
                  display: none;
                }
            id="xAxisGElementchart_199"
            transform="translate(0, -35)"
          />
          <g
            class=

                & text {
                  -moz-osx-font-smoothing: grayscale;
                  -webkit-font-smoothing: antialiased;
                  fill: #f3f2f1;
                  font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                  font-size: 10px;
                  font-weight: 600;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& text {
                  fill: rgb(179, 179, 179);
                }
                & path {
                  display: none;
                }
                & line {
                  opacity: 0.2;
                  stroke: #f3f2f1;
                }
                @media screen and (-ms-high-contrast: white-on-black), screen and (forced-colors: active) and (prefers-color-scheme: dark){& line {
                  opacity: 0.1;
                  stroke: rgb(179, 179, 179);
                }
            id="yAxisGElementchart_199"
            transform="translate(40, 0)"
          />
          <g>
            <line
              id="verticalLine194"
              stroke="#C8C8C8"
              stroke-dasharray="5,5"
              visibility="hidden"
              x1="0"
              x2="0"
              y1="0"
              y2="0"
            />
            <g>
              <line
                id="lineID192_2_1"
                opacity="1"
                stroke="yellow"
                stroke-linecap="round"
                stroke-width="4"
                x1="-20"
                x2="16"
                y1="-17.065217391304344"
                y2="12.826086956521738"
              />
              <path
                aria-label="70. metaData3, 30."
                d="M-20.5 -17.065217391304344
     A0.5 0.5 0 1 0 -19.5 -17.065217391304344
     M-20.5 -17.065217391304344
     A 0.5 0.5 0 1 1 -19.5 -17.065217391304344
     "
                data-is-focusable="true"
                fill="yellow"
                id="circle191_2_1"
                opacity="1"
                role="img"
                stroke="yellow"
                stroke-width="4"
                tabindex="0"
              />
              <path
                aria-label="40. metaData3, 80."
                d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
                data-is-focusable="true"
                fill="yellow"
                id="circle191_2_11L"
                opacity="1"
                role="img"
                stroke="yellow"
                stroke-width="4"
                tabindex="-1"
              />
              <line
                id="lineID192_1_1"
                opacity="1"
                stroke="green"
                stroke-linecap="round"
                stroke-width="4"
                x1="28"
                x2="4"
                y1="0.8695652173913064"
                y2="18.804347826086957"
              />
              <path
                aria-label="30. metaData2, 60."
                d="M27.5 0.8695652173913064
     A0.5 0.5 0 1 0 28.5 0.8695652173913064
     M27.5 0.8695652173913064
     A 0.5 0.5 0 1 1 28.5 0.8695652173913064
     "
                data-is-focusable="true"
                fill="green"
                id="circle191_1_1"
                opacity="1"
                role="img"
                stroke="green"
                stroke-width="4"
                tabindex="-1"
              />
              <path
                aria-label="50. metaData2, 90."
                d="M3.5 18.804347826086957
     A0.5 0.5 0 1 0 4.5 18.804347826086957
     M3.5 18.804347826086957
     A 0.5 0.5 0 1 1 4.5 18.804347826086957
     "
                data-is-focusable="true"
                fill="green"
                id="circle191_1_11L"
                opacity="1"
                role="img"
                stroke="green"
                stroke-width="4"
                tabindex="-1"
              />
              <line
                id="lineID192_0_1"
                opacity="1"
                stroke="red"
                stroke-linecap="round"
                stroke-width="4"
                x1="40"
                x2="16"
                y1="-5.108695652173914"
                y2="12.826086956521738"
              />
              <path
                aria-label="20. metaData1, 50."
                d="M39.5 -5.108695652173914
     A0.5 0.5 0 1 0 40.5 -5.108695652173914
     M39.5 -5.108695652173914
     A 0.5 0.5 0 1 1 40.5 -5.108695652173914
     "
                data-is-focusable="true"
                fill="red"
                id="circle191_0_1"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="-1"
              />
              <path
                aria-label="40. metaData1, 80."
                d="M15.5 12.826086956521738
     A0.5 0.5 0 1 0 16.5 12.826086956521738
     M15.5 12.826086956521738
     A 0.5 0.5 0 1 1 16.5 12.826086956521738
     "
                data-is-focusable="true"
                fill="red"
                id="circle191_0_11L"
                opacity="1"
                role="img"
                stroke="red"
                stroke-width="4"
                tabindex="-1"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class=

            {
              margin-left: 20px;
              margin-top: 8px;
            }
      >
        <div
          class=

              {
                align-items: center;
                margin-bottom: 0;
                margin-left: -8px;
                margin-right: 0;
                margin-top: -8px;
                white-space: nowrap;
                width: 100%;
              }
        >
          <div>
            <div
              style="position: relative;"
            >
              <div
                data-automation-id="visibleContent"
                style="position: fixed; visibility: hidden;"
              >
                <div
                  aria-label="Legends"
                  aria-multiselectable="false"
                  class=
                      ms-FocusZone
                      &:focus {
                        outline: none;
                      }
                  data-focuszone-id="FocusZone201"
                  role="listbox"
                >
                  <div
                    class=
                        ms-OverflowSet
                        {
                          display: flex;
                          flex-wrap: wrap;
                          justify-content: unset;
                          position: relative;
                        }
                    role="group"
                  >
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="metaData1"
                        aria-posinset="1"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class=

                              {
                                background-color: red;
                                border-color: red;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, red, red);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          metaData1
                        </div>
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="metaData2"
                        aria-posinset="2"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                background-color: green;
                                border-color: green;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, green, green);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          metaData2
                        </div>
                      </button>
                    </div>
                    <div
                      class=
                          ms-OverflowSet-item
                          {
                            display: inherit;
                            flex-shrink: 0;
                          }
                      role="none"
                    >
                      <button
                        aria-label="metaData3"
                        aria-posinset="3"
                        aria-selected="false"
                        aria-setsize="3"
                        class=

                            {
                              align-items: center;
                              background: none;
                              border: none;
                              cursor: pointer;
                              display: flex;
                              outline: transparent;
                              padding-bottom: 8px;
                              padding-left: 8px;
                              padding-right: 8px;
                              padding-top: 8px;
                              position: relative;
                              text-transform: capitalize;
                            }
                            &::-moz-focus-inner {
                              border: 0;
                            }
                            .ms-Fabric--isFocusVisible &:focus:after {
                              border: 1px solid transparent;
                              bottom: 1px;
                              content: "";
                              left: 1px;
                              outline: 1px solid #a19f9d;
                              position: absolute;
                              right: 1px;
                              top: 1px;
                              z-index: 1;
                            }
                            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){.ms-Fabric--isFocusVisible &:focus:after {
                              outline-color: #a19f9d;
                            }
                        data-is-focusable="true"
                        role="option"
                        tabindex="-1"
                      >
                        <div
                          class=

                              {
                                background-color: yellow;
                                border-color: yellow;
                                border: 1px solid;
                                content: ;
                                height: 12px;
                                margin-right: 8px;
                                width: 12px;
                              }
                              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                                content: linear-gradient(to right, yellow, yellow);
                                opacity: ;
                              }
                        />
                        <div
                          class=

                              {
                                -moz-osx-font-smoothing: grayscale;
                                -webkit-font-smoothing: antialiased;
                                color: #f3f2f1;
                                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                                font-size: 12px;
                                font-weight: 400;
                                line-height: 16px;
                                opacity: ;
                              }
                        >
                          metaData3
                        </div>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="ms-layer"
      />
    </div>
  </div>
</div>
`;
